# my_fe_code_plugin

./: Cargo.toml  README.md
release/: libmy_code_plugin.nro
src/: lib.rs  notes
